# Probabilistic-Machine-Learning

An_Introduction/: pyproject.toml
An_Introduction/app/ch02/: 01DiscreteProbDistPlot.ipynb  02StandardNormalDistribution.ipynb  03BimodalDistribution_MixtureOfTwo1dGaussians.ipynb  04AnscombesQuartet.ipynb  05BinomDistPlot.ipynb
An_Introduction/app/ch04/: .gitignore  01EmaDemo.ipynb  02ShrinkcovPlots.ipynb  03LinregPolyRidge.ipynb  04PolyfitRidgeCV.ipynb  05ImdbMlpBowTf.ipynb
