[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joichiro433 <joichiro322@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.23.5"
polars = "^0.17.9"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jax = "^0.4.8"
jaxlib = "^0.4.7"
scikit-learn = "^1.2.2"
plotly = "^5.14.1"
jupyterlab = "^3.6.3"
rich = "^13.3.5"
ipywidgets = "^8.0.6"
latexify-py = "^0.2.0"
nptyping = "^2.5.0"
pyarrow = "^11.0.0"
tensorflow-macos = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
